Fix GitRepositoryTest tests.
PiperOrigin-RevId: 470578864
Change-Id: I25b14956c44ffacdec34666f180cc633d58291a2